--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,14 +41,17 @@ dependencies:
   intl: ^0.17.0
   shared_preferences: ^2.0.7
   uuid: ^3.0.4
-  image_picker: ^0.8.4
-  firebase_storage: ^10.0.3
   loading_overlay: ^0.3.0
   change_app_package_name: ^1.0.0
   provider: ^6.0.1
   charts_flutter: ^0.11.0
   flutter_staggered_grid_view: ^0.4.1
   date_format: ^2.0.4
+  freezed: ^0.15.0+1
+  image_picker: ^0.8.4+2
+  firebase_storage: ^10.0.5
+  image_cropper: ^1.4.1
+  flutter_native_image: ^0.0.6+1
 
 
 dev_dependencies:
